# securelock

./: .gitignore  README.md  package-lock.json  package.json
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  crypto.rs  folder.rs  main.rs
